<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title_my_portfolio">My Udacity Nano Portfolio</string>

    <string name="btn_txt_popular_movies">Popular Movies</string>
    <string name="btn_txt_football_scores">Football Scores App</string>
    <string name="btn_txt_library_app">Library App</string>
    <string name="btn_txt_build_it_bigger">Build It Bigger</string>
    <string name="btn_txt_xyz_reader">XYZ Reader</string>
    <string name="btn_txt_capstone">Capstone</string>

    <string name="message_this_will_start_app">"This will start this app: "</string>
</resources>
